--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,26 +30,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  flutter_tts: ^3.8.5
-  speech_to_text: ^6.3.0
-  firebase_core: ^2.25.4
-  cloud_firestore: ^4.17.5
-  translator: ^0.1.7
+  flutter_tts: ^3.8.3
+  speech_to_text: ^6.6.0
+  geolocator: ^10.1.0
+  http: ^1.1.0          # Add this for API calls
+  intl: ^0.18.1         # Add this for date formatting
+  firebase_core: ^3.15.2
+  cloud_firestore: ^5.6.12
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -63,8 +55,6 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/farmer_bg.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
