--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -59,6 +58,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/
+    - assets/farmer_bg.jpg
     - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
