--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^5.4.0          # HTTP client for API calls
   logger: ^2.0.2+1     # Logging utility
   flutter_dotenv: ^5.1.0  # Environment variables
+  google_generative_ai: ^0.2.0  # Google Gemini AI
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +60,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/farmer_bg.jpg
+    - assets/agriculture_bg.jpg
     - .env
+    - assets/
+    - assets/crops/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
