--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   logger: ^2.0.2+1     # Logging utility
   flutter_dotenv: ^5.1.0  # Environment variables
   google_generative_ai: ^0.2.0  # Google Gemini AI
+  url_launcher: ^6.0.12
 
 dev_dependencies:
   flutter_test:
