--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   google_generative_ai: ^0.2.0
   url_launcher: ^6.1.14
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
